--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nabu.data</groupId>
 	<artifactId>excel</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>${nabu.data-excel-version}</version>
 	<name>excel</name>
 	
 	<parent>
